--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,34 @@
 cmake_minimum_required(VERSION 3.16)
 project(discord_cpp_bot LANGUAGES CXX)
 
+# =========================================================
+# COMPILER SETTINGS
+# =========================================================
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_COMPILER_LAUNCHER ccache)
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
 
+# =========================================================
+# DEPENDENCIES
+# =========================================================
 find_package(dpp REQUIRED CONFIG)
 
-# Include folder
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+# Coba cari libopus dengan pkg-config
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(OPUS REQUIRED opus)
+
+# =========================================================
+# INCLUDE PATHS
+# =========================================================
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${OPUS_INCLUDE_DIRS}
+)
+
+link_directories(
+    ${OPUS_LIBRARY_DIRS}
+)
 
 file(GLOB COMMAND_SOURCES "commands/*.cpp")
 
@@ -18,12 +37,16 @@ file(GLOB COMMAND_SOURCES "commands/*.cpp")
 # =========================================================
 add_executable(bot
     main.cpp
-    memoryManager.cpp 
+    memoryManager.cpp
     command_registry.cpp
     ${COMMAND_SOURCES}
 )
 
-target_link_libraries(bot PRIVATE dpp::dpp)
+target_link_libraries(bot
+    PRIVATE
+    dpp::dpp
+    ${OPUS_LIBRARIES}
+)
 
 # =========================================================
 # DEPLOY EXECUTABLE
@@ -35,9 +58,13 @@ add_executable(deploy
     ${COMMAND_SOURCES}
 )
 
-target_link_libraries(deploy PRIVATE dpp::dpp)
+target_link_libraries(deploy
+    PRIVATE
+    dpp::dpp
+    ${OPUS_LIBRARIES}
+)
 
 # =========================================================
-# OPSIONAL
+# OPTIONAL INSTALL
 # =========================================================
 # install(TARGETS bot deploy DESTINATION bin)
