Refactor CMake to use FetchContent for dependencies
Updated CMakeLists.txt to use FetchContent for dependencies and improved handling of library includes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,38 +1,81 @@
 cmake_minimum_required(VERSION 3.16)
 project(discord_cpp_bot LANGUAGES CXX)
 
-# =========================================================
-# COMPILER SETTINGS
-# =========================================================
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_COMPILER_LAUNCHER ccache)
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+
+include(FetchContent)
+include(FindPkgConfig)
 
 # =========================================================
-# DEPENDENCIES
+# DEPENDENCIES (auto-download jika tidak ditemukan)
 # =========================================================
-find_package(PkgConfig REQUIRED)
 
-# DPP (Discord++)
-find_package(dpp REQUIRED CONFIG)
+# DPP
+find_package(dpp QUIET CONFIG)
+if (NOT dpp_FOUND)
+    message(STATUS "Downloading DPP...")
+    FetchContent_Declare(
+        dpp
+        GIT_REPOSITORY https://github.com/brainboxdotcc/DPP.git
+        GIT_TAG master
+    )
+    FetchContent_MakeAvailable(dpp)
+endif()
 
-# Opus (Voice codec)
-pkg_check_modules(OPUS REQUIRED opus)
+# Opus
+pkg_check_modules(OPUS QUIET opus)
+if (NOT OPUS_FOUND)
+    message(STATUS "Downloading libopus...")
+    FetchContent_Declare(
+        opus
+        GIT_REPOSITORY https://github.com/xiph/opus.git
+        GIT_TAG main
+    )
+    FetchContent_MakeAvailable(opus)
+endif()
 
-# Sodium (Encryption)
-pkg_check_modules(SODIUM REQUIRED libsodium)
+# Sodium
+find_library(SODIUM_LIB sodium)
+find_path(SODIUM_INCLUDE sodium.h)
+if (NOT SODIUM_LIB OR NOT SODIUM_INCLUDE)
+    message(STATUS "Downloading libsodium...")
+    FetchContent_Declare(
+        sodium
+        GIT_REPOSITORY https://github.com/jedisct1/libsodium.git
+        GIT_TAG stable
+    )
+    FetchContent_MakeAvailable(sodium)
+endif()
 
 # JSON for Modern C++
-find_path(JSON_INCLUDE_DIRS "nlohmann/json.hpp"
-    HINTS /usr/include /usr/local/include
-)
+find_path(JSON_INCLUDE_DIR nlohmann/json.hpp)
+if (NOT JSON_INCLUDE_DIR)
+    message(STATUS "Downloading nlohmann/json...")
+    FetchContent_Declare(
+        nlohmann_json
+        GIT_REPOSITORY https://github.com/nlohmann/json.git
+        GIT_TAG develop
+    )
+    FetchContent_MakeAvailable(nlohmann_json)
+    set(JSON_INCLUDE_DIR ${nlohmann_json_SOURCE_DIR}/include)
+endif()
 
-# MLS++ (End-to-End encryption)
-find_library(MLS_LIB mlspp HINTS /usr/local/lib)
-find_path(MLS_INCLUDE_DIRS "mlspp/common.h"
-    HINTS /usr/local/include /usr/include
-)
+# MLS++
+find_library(MLS_LIB mlspp)
+find_path(MLS_INCLUDE_DIR mlspp PATHS /usr/local/include)
+if (NOT MLS_LIB OR NOT MLS_INCLUDE_DIR)
+    message(STATUS "Downloading MLS++...")
+    FetchContent_Declare(
+        mlspp
+        GIT_REPOSITORY https://github.com/cisco/mlspp.git
+        GIT_TAG main
+    )
+    FetchContent_MakeAvailable(mlspp)
+    set(MLS_INCLUDE_DIR ${mlspp_SOURCE_DIR}/include)
+    set(MLS_LIB mlspp)
+endif()
 
 # =========================================================
 # INCLUDE PATHS
@@ -40,20 +83,18 @@ find_path(MLS_INCLUDE_DIRS "mlspp/common.h"
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${OPUS_INCLUDE_DIRS}
-    ${SODIUM_INCLUDE_DIRS}
-    ${JSON_INCLUDE_DIRS}
-    ${MLSPP_INCLUDE_DIRS}
+    ${SODIUM_INCLUDE}
+    ${JSON_INCLUDE_DIR}
+    ${MLS_INCLUDE_DIR}
 )
 
-link_directories(
-    ${OPUS_LIBRARY_DIRS}
-    ${SODIUM_LIBRARY_DIRS}
-)
-
+# =========================================================
+# SOURCES
+# =========================================================
 file(GLOB COMMAND_SOURCES "commands/*.cpp")
 
 # =========================================================
-# BOT EXECUTABLE
+# EXECUTABLES
 # =========================================================
 add_executable(bot
     main.cpp
@@ -62,17 +103,6 @@ add_executable(bot
     ${COMMAND_SOURCES}
 )
 
-target_link_libraries(bot
-    PRIVATE
-    dpp::dpp
-    ${OPUS_LIBRARIES}
-    ${SODIUM_LIBRARIES}
-    ${MLSPP_LIB}
-)
-
-# =========================================================
-# DEPLOY EXECUTABLE
-# =========================================================
 add_executable(deploy
     memoryManager.cpp
     deploy.cpp
@@ -80,25 +110,13 @@ add_executable(deploy
     ${COMMAND_SOURCES}
 )
 
-target_link_libraries(deploy
-    PRIVATE
-    dpp::dpp
-    ${OPUS_LIBRARIES}
-    ${SODIUM_LIBRARIES}
-    ${MLS_LIB}
-)
+# =========================================================
+# LINK LIBRARIES
+# =========================================================
+target_link_libraries(bot PRIVATE dpp::dpp ${OPUS_LIBRARIES} ${SODIUM_LIB} ${MLS_LIB})
+target_link_libraries(deploy PRIVATE dpp::dpp ${OPUS_LIBRARIES} ${SODIUM_LIB} ${MLS_LIB})
 
 # =========================================================
 # OPTIONAL INSTALL
 # =========================================================
 # install(TARGETS bot deploy DESTINATION bin)
-
-# =========================================================
-# LOG INFO (for clarity)
-# =========================================================
-message(STATUS "DPP Found: ${dpp_DIR}")
-message(STATUS "Opus Include: ${OPUS_INCLUDE_DIRS}")
-message(STATUS "Sodium Include: ${SODIUM_INCLUDE_DIRS}")
-message(STATUS "JSON Include: ${JSON_INCLUDE_DIRS}")
-message(STATUS "MLS++ Include: ${MLS_INCLUDE_DIRS}")
-message(STATUS "Linked MLS++: ${MLS_LIB}")
